--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
   "name": "kodo-expressjs-iniciante",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "Projeto explicando o básico do expressjs",
+  "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node app.js"
+  },
+  "engines": {
+    "node": ">=0.12.0"
   },
   "repository": {
     "type": "git",
@@ -15,5 +18,8 @@
   "bugs": {
     "url": "https://github.com/N4Works/kodo-expressjs-iniciante/issues"
   },
-  "homepage": "https://github.com/N4Works/kodo-expressjs-iniciante#readme"
+  "homepage": "https://github.com/N4Works/kodo-expressjs-iniciante#readme",
+  "dependencies": {
+    "express": "^4.13.3"
+  }
 }
