--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/N4Works/kodo-expressjs-iniciante#readme",
   "dependencies": {
+    "body-parser": "^1.14.0",
     "express": "^4.13.3"
   }
 }
